packages/rust/holy/tests/fail/05-sanitize-invalid-rule.rs
use holy::Sanitize;

#[derive(Sanitize)]
pub struct Bad {
	#[holy(sanitize = "trim,bogus_rule")]
	pub name: String,
}

fn main() {}
